--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,10 @@
     "iron-pages": "PolymerElements/iron-pages#^1.0.0",
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
-    "polymer": "Polymer/polymer#^1.6.0"
+    "polymer": "Polymer/polymer#^1.6.0",
+    "cropperjs": "^0.8.1",
+    "iron-image": "PolymerElements/iron-image#^1.2.5",
+    "paper-button": "PolymerElements/paper-button#^1.0.13"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
