--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,24 @@
 {
-  "name": "My App",
-  "short_name": "My App",
-  "start_url": "/?homescreen=1",
+  "name": "CLO: Find your fashion",
+  "short_name": "CLO",
+  "start_url": "/view2",
   "display": "standalone",
-  "theme_color": "#3f51b5",
+  "theme_color": "#6fa8dc",
   "background_color": "#3f51b5",
   "icons": [
     {
       "src": "images/manifest/icon-192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "images/manifest/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "images/manifest/icon-384x384.png",
+      "sizes": "384x384",
       "type": "image/png"
     },
     {
